Fix: fixed overflow issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,4 @@
 /* GLOBAL */
-
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 li {
@@ -28,13 +27,11 @@ address a{
 .hamburger-toggle {
     position: absolute;
     display: flex;
-    width: 40px;
-    height: 40px;
     top: 25px;
-    right: -10px;
+    right: 20px;
     cursor: pointer;
     z-index: 1000;
-}
+}    
 
 .hamburger-toggle i {
     font-size: 25px;
@@ -58,12 +55,10 @@ address a{
 }
 
 .cart{
-    position: fixed;
+    position: absolute;
     display: flex;
-    width: 40px;
-    height: 40px;
     top: 60px;
-    right: -10px;
+    right: 20px;
     cursor: pointer;
     z-index: 1;
     font-size: 1.2rem;
